# pacman

./: .gitignore  LICENSE  README.md  pacman.cabal  stack.yaml
assets/: classic  map001  map002
executables/: Main.hs  MapGenerator.hs  Pacman.hs
src/: Animation.hs  Event.hs  Rendering.hs  Types.hs  Util.hs  World.hs
tests/: UtilSpec.hs  WorldSpec.hs
