name:                  pacman
version:               0.1.0.0
-- synopsis:            
-- description:         
license:               MIT
license-file:          LICENSE
author:                zcesur
maintainer:            zafercesur@gmail.com
-- copyright:           
category:              Game
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

source-repository head
  type:                git
  location:            https://github.com/zcesur/pacman.git

library
  exposed-modules:     Animation, World, Event, Rendering, Util, Types
  build-depends:       base >=4.8 && <4.9, gloss >=1.11 && <1.12
  hs-source-dirs:      src
  default-language:    Haskell2010

executable pacman
  main-is:             Pacman.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, gloss >=1.11 && <1.12, pacman
  hs-source-dirs:      executables
  default-language:    Haskell2010

executable generator
  main-is:             MapGenerator.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, pacman
  hs-source-dirs:      executables
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      tests
  build-depends:       base, pacman, hspec, hspec-discover
  default-language:    Haskell2010
